# uniform-distribution-modelling

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: juliet-s-issue-template.md
gui/: numbers_validation_window.ui
include/: lehmers_generator.h  uniform_generator.h
include/ui/: bar_plot.h  line_plot.h  numbers_validation_window.h  params_input_window.h
res/: params_input_window.ui  resources.qrc
src/: lehmers_generator.cpp  main.cpp  uniform_generator.cpp
src/ui/: bar_plot.cpp  line_plot.cpp  numbers_validation_window.cpp  params_input_window.cpp
tests/: lehmers_generator.cpp
